# iron_ssg

./: .gitignore  Cargo.toml  README.md  a1k9.toml  build.bat  iron_ssg.toml  ls.txt  router.json  run.bat
_logs/: iron_ssg.toml.json
models/: about.json
public/css/: site.css
src/: iron_ssg.rsx  ironssg.rs  ironssg_generators.rs  ironssg_manifest.rs  lib.rs  main.rs
src/iron_ssg/: config.rs  errors.rs  file_utils.rs  ironssg_page.rs  mod.rs  page_manifest.rs  site_manifest.rs
src/ironssg/: file_utils.rs  mod.rs  page_manifest.rs
tests/: toml_deserialization.rs
views/: about.hbs  index.hbs
