[package]
edition = "2021"
name = "iron-ssg"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0.4"
dotenv = "0.15.0"
fs_extra = "1.2"
glob = "0.3.1"
json = "0.12.4"
pulldown-cmark = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.19.1"
toml = "0.8.1"
